2013-12-23  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: added the --tls1 option to force TLS 1

2013-10-09  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: whole script reviewed with shellcheck

2013-10-01  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: fixes with shellcheck (quoting)

2013-07-29  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: Added an option to force a given SSL version

2013-03-02  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: Fixed a bug occuring with TLS and multiple names in
                          the certificate

2012-12-07  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: removed "test -a/-o" (test has an undefined
                          behavior with more than 4 elements)

	* check_ssl_cert: fixed	#122 (-N was always comparing the CN with 'localhost')

2012-11-16  Matteo Corti  <matteo.corti@id.ethz.ch>

	* simplified the sourcing of the script file for testing

2012-10-11  Matteo Corti  <matteo.corti@id.ethz.ch>

	* added some unit tests with shUnit2

2012-09-19  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: improved the "No certificate returned" error message

2012-07-13  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: added the number of days from or to expiration in the
			  plugin output

2012-07-11  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: fixed a bug with Perl date computation on some systems

2012-07-06  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: performance data in days
	* check_ssl_cert: long output (certificate attributes)

2012-04-05  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: handle broken OpenSSL clients (-servername not working)

2012-04-04  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: removed an hard coded reference to the error number by the
	                  SSL chain verification

2011-10-22  Matteo Corti  <matteo.corti@id.ethz.ch>
