@@ -32,6 +32,7 @@ Thanks:
 * Many thanks to Christian Ruppert for the XMPP patch
 * Many thanks to Robin H. Johnson for the 'timeout' patch
 * Many thanks to Max Winterstein for the SSL version patch
+* Many thanks to Colin Smith for the RPM build Makefile patch
 
 # File version information:
 # $Id: AUTHORS 1103 2009-12-07 07:49:19Z corti $
