@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH "check_ssl_cert" 1 "May, 2013" "1.16.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "May, 2013" "1.16.1" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
