@@ -1,3 +1,4 @@
+2014-02-28 Version 1.16.1 Added a Make target for the RPM package
 2013-12-23 Version 1.16.0 Added an option to force TLS version 1
 2013-07-29 Version 1.15.0 Added an option to force a certain SSL version (thanks
                           to Max Winterstein)
